[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Lato-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprites/card.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Tower.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Field.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Deck.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 2 )

[node name="Game" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Mockups & Placement" type="Node" parent="."]
editor/display_folded = true

[node name="Anschluss" type="ColorRect" parent="Mockups & Placement"]
editor/display_folded = true
margin_top = 430.0
margin_right = 183.0
margin_bottom = 600.0
color = Color( 0.0604095, 0.417969, 0.200081, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mockups & Placement/Anschluss"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Anschluss"
align = 1
autowrap = true

[node name="Player Hand" type="ColorRect" parent="Mockups & Placement"]
editor/display_folded = true
margin_left = 210.0
margin_top = 450.0
margin_right = 1030.0
margin_bottom = 600.0
color = Color( 0.0604095, 0.417969, 0.200081, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mockups & Placement/Player Hand"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player Hand"
align = 1
valign = 1
autowrap = true

[node name="Player Field" type="ColorRect" parent="Mockups & Placement"]
editor/display_folded = true
visible = false
margin_left = 190.0
margin_top = 230.0
margin_right = 820.0
margin_bottom = 430.0
color = Color( 0.0604095, 0.417969, 0.200081, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mockups & Placement/Player Field"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Player Field"
align = 1
valign = 1
autowrap = true

[node name="Enemy Field" type="ColorRect" parent="Mockups & Placement"]
editor/display_folded = true
visible = false
margin_left = 190.0
margin_top = 10.0
margin_right = 820.0
margin_bottom = 210.0
color = Color( 0.0604095, 0.417969, 0.200081, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mockups & Placement/Enemy Field"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Enemy Field"
align = 1
valign = 1
autowrap = true

[node name="Left Lane" type="ColorRect" parent="Mockups & Placement"]
editor/display_folded = true
margin_left = 225.0
margin_top = 20.0
margin_right = 365.0
margin_bottom = 420.0
color = Color( 0.381654, 0.417969, 0.0604095, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mockups & Placement/Left Lane"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Left Lane"
align = 1
valign = 1
autowrap = true

[node name="Middle Lane" type="ColorRect" parent="Mockups & Placement"]
editor/display_folded = true
margin_left = 435.0
margin_top = 20.0
margin_right = 575.0
margin_bottom = 420.0
color = Color( 0.381654, 0.417969, 0.0604095, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mockups & Placement/Middle Lane"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Middle Lane"
align = 1
valign = 1
autowrap = true

[node name="Right Lane" type="ColorRect" parent="Mockups & Placement"]
editor/display_folded = true
margin_left = 645.0
margin_top = 20.0
margin_right = 785.0
margin_bottom = 420.0
color = Color( 0.381654, 0.417969, 0.0604095, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Mockups & Placement/Right Lane"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Right Lane"
align = 1
valign = 1
autowrap = true

[node name="player_approaching_label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 845.0
margin_top = 435.0
margin_right = -59.0
margin_bottom = 449.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Approaching"
align = 1
valign = 1
autowrap = true

[node name="enemy_approaching_label2" type="Label" parent="."]
anchor_right = 1.0
margin_left = 845.0
margin_top = 274.0
margin_right = -59.0
margin_bottom = 288.0
rect_rotation = -90.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Approaching"
align = 1
valign = 1
autowrap = true

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
margin_left = 45.0
margin_top = 460.0
margin_right = 173.0
margin_bottom = 588.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="back_enemy_approaching" type="NinePatchRect" parent="."]
margin_left = 860.0
margin_top = 150.0
margin_right = 988.0
margin_bottom = 278.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="enemy_left_backdrop" type="NinePatchRect" parent="."]
margin_left = 231.0
margin_top = 76.0
margin_right = 359.0
margin_bottom = 204.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="enemy_middle_backdrop" type="NinePatchRect" parent="."]
margin_left = 441.0
margin_top = 76.0
margin_right = 569.0
margin_bottom = 204.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="enemy_right_backdrop" type="NinePatchRect" parent="."]
margin_left = 651.0
margin_top = 76.0
margin_right = 779.0
margin_bottom = 204.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="player_left_backdrop" type="NinePatchRect" parent="."]
margin_left = 231.0
margin_top = 236.0
margin_right = 359.0
margin_bottom = 364.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="player_middle_backdrop" type="NinePatchRect" parent="."]
margin_left = 441.0
margin_top = 236.0
margin_right = 569.0
margin_bottom = 364.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="player_right_backdrop" type="NinePatchRect" parent="."]
margin_left = 651.0
margin_top = 236.0
margin_right = 779.0
margin_bottom = 364.0
texture = ExtResource( 3 )
region_rect = Rect2( 576, 0, 192, 192 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="towers" type="Node2D" parent="."]
editor/display_folded = true

[node name="tower_left_ally" parent="towers" instance=ExtResource( 4 )]
position = Vector2( 295, 405 )

[node name="tower_middle_ally" parent="towers" instance=ExtResource( 4 )]
position = Vector2( 505, 405 )

[node name="tower_right_ally" parent="towers" instance=ExtResource( 4 )]
position = Vector2( 715, 405 )

[node name="tower_left_enemy" parent="towers" instance=ExtResource( 4 )]
position = Vector2( 295, 35 )

[node name="tower_middle_enemy" parent="towers" instance=ExtResource( 4 )]
position = Vector2( 505, 35 )

[node name="tower_right_enemy" parent="towers" instance=ExtResource( 4 )]
position = Vector2( 715, 35 )

[node name="field" type="Node2D" parent="."]

[node name="field_left_enemy_tower" parent="field" instance=ExtResource( 5 )]
margin_left = 190.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 60.0

[node name="field_left_enemy_familiar" parent="field" instance=ExtResource( 5 )]
margin_left = 190.0
margin_top = 60.0
margin_right = 400.0
margin_bottom = 220.0
type = "familiar"

[node name="field_left_ally_familiar" parent="field" instance=ExtResource( 5 )]
margin_left = 190.0
margin_top = 220.0
margin_right = 400.0
margin_bottom = 380.0
side = "friendly"
type = "familiar"

[node name="field_left_ally_tower" parent="field" instance=ExtResource( 5 )]
margin_left = 190.0
margin_top = 380.0
margin_right = 400.0
margin_bottom = 430.0
side = "friendly"

[node name="field_middle_enemy_tower" parent="field" instance=ExtResource( 5 )]
margin_left = 400.0
margin_top = 10.0
margin_right = 610.0
margin_bottom = 60.0
lane = "middle"

[node name="field_middle_enemy_familiar" parent="field" instance=ExtResource( 5 )]
margin_left = 400.0
margin_top = 60.0
margin_right = 610.0
margin_bottom = 220.0
lane = "middle"
type = "familiar"

[node name="field_middle_ally_familiar" parent="field" instance=ExtResource( 5 )]
margin_left = 400.0
margin_top = 220.0
margin_right = 610.0
margin_bottom = 380.0
lane = "middle"
side = "friendly"
type = "familiar"

[node name="field_middle_ally_tower" parent="field" instance=ExtResource( 5 )]
margin_left = 400.0
margin_top = 380.0
margin_right = 610.0
margin_bottom = 430.0
lane = "middle"
side = "friendly"

[node name="field_right_enemy_tower" parent="field" instance=ExtResource( 5 )]
margin_left = 610.0
margin_top = 10.0
margin_right = 820.0
margin_bottom = 60.0
lane = "right"

[node name="field_right_enemy_familiar" parent="field" instance=ExtResource( 5 )]
margin_left = 610.0
margin_top = 60.0
margin_right = 820.0
margin_bottom = 220.0
lane = "right"
type = "familiar"

[node name="field_right_ally_familiar" parent="field" instance=ExtResource( 5 )]
margin_left = 610.0
margin_top = 220.0
margin_right = 820.0
margin_bottom = 380.0
lane = "right"
side = "friendly"
type = "familiar"

[node name="field_right_ally_tower" parent="field" instance=ExtResource( 5 )]
margin_left = 610.0
margin_top = 380.0
margin_right = 820.0
margin_bottom = 430.0
lane = "right"
side = "friendly"

[node name="player_deck" parent="." instance=ExtResource( 6 )]
position = Vector2( 924, 374 )

[node name="enemy_deck" parent="." instance=ExtResource( 6 )]
position = Vector2( 924, 74 )
side = "enemy"

[node name="win-lose-box" type="PanelContainer" parent="."]
margin_top = 40.0
margin_right = 190.0
margin_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="win-lose-box"]
margin_left = 7.0
margin_top = 7.0
margin_right = 183.0
margin_bottom = 73.0

[node name="message" type="Label" parent="win-lose-box/VBoxContainer"]
margin_right = 176.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.802696, 0.808594, 0.0536957, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You Win!"
align = 1

[node name="return-button" type="Button" parent="win-lose-box/VBoxContainer"]
margin_top = 46.0
margin_right = 176.0
margin_bottom = 66.0
text = "Return to Menu."

[node name="cards" type="Node" parent="."]

[node name="pause_container" type="PanelContainer" parent="."]
editor/display_folded = true
margin_top = 560.0
margin_right = 240.0
margin_bottom = 600.0
__meta__ = {
"_edit_group_": true
}

[node name="Panel" type="Panel" parent="pause_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 233.0
margin_bottom = 33.0

[node name="Label" type="Label" parent="pause_container/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 1
text = "Game paused (Space to resume)"
align = 1
valign = 1

[node name="elements" type="Node" parent="."]

[node name="effects" type="Node" parent="."]

[connection signal="pressed" from="win-lose-box/VBoxContainer/return-button" to="." method="_on_returnbutton_pressed"]
